--- a/docs/5.交易处理.md
+++ b/docs/5.交易处理.md
@@ -20,7 +20,7 @@
       
       5. 交易源码
       
-         入口：eth -> api
+         入口：internal/ethapi -> func (s *PublicTransactionPoolAPI) SendTransaction
       
          a）发起交易：在本地生成新的交易，准备发送到txPool
       
